[gd_scene load_steps=5 format=3 uid="uid://c3qx8g3ihbre0"]

[ext_resource type="Script" uid="uid://llmy7c4wsdnm" path="res://Global Scene Preloads/Equipment/Scenes/equipment.gd" id="1_gv2wp"]
[ext_resource type="PackedScene" uid="uid://c74nurywvrmkl" path="res://Graphic Elements/Buttons/super_button.tscn" id="2_3vesg"]
[ext_resource type="PackedScene" uid="uid://cb0xb20pk0mpa" path="res://Images/SpriteSheets/sprite.tscn" id="2_tomgk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tomgk"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Equipment" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gv2wp")
myScale = Vector2(5, 5)

[node name="SuperButton" parent="." instance=ExtResource("2_3vesg")]
layout_mode = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_tomgk")

[node name="Sprite" parent="SuperButton/HBoxContainer" index="0" instance=ExtResource("2_tomgk")]
layout_mode = 2

[connection signal="wasSelected" from="SuperButton" to="." method="_on_super_button_was_selected"]

[editable path="SuperButton"]
